# hack_back

./: .env.example  pyproject.toml  render.yaml  requirements.txt
src/neuro_api/: __init__.py  config.py  database.py  main.py
src/neuro_api/models/: __init__.py  historico.py  paciente.py  procedimento.py
src/neuro_api/routes/: __init__.py  historico.py  orientacoes.py  pacientes.py  procedimentos.py
src/neuro_api/services/: ai_agent.py
