[project]
name = "neuro-api"
version = "0.1.0"
description = "API REST do NeuroAcolhe — orientações para atendimento de pacientes neurodivergentes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "google-genai>=2.9.0",
    "pydantic-settings>=2.9",
    "python-dotenv>=1.1",
    "supabase>=2.15",
    "uvicorn[standard]>=0.34",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
